src/rust/type_system/snapshots/syn_state_machine__rust__type_system__types__tests__concat_idents! (parse it_matches_generic_trait_2).snap
---
source: src/rust/type_system/types.rs
expression: "crate::parse::<Type<P<Infallible>>>(q.clone())"
---
Ok(
    NoBounds(
        TypePath(
            HigherOrderPath {
                leading: false,
                segments: Interlace {
                    values: [
                        Generic(
                            Id(
                                Ident(
                                    Box,
                                ),
                            ),
                            GenericArgs {
                                args: Interlace {
                                    values: [
                                        Ty(
                                            TraitObject(
                                                TraitObjectType {
                                                    bounds: MinLength(
                                                        Interlace {
                                                            values: [
                                                                Tr(
                                                                    TraitBound {
                                                                        q: false,
                                                                        for_lts: None,
                                                                        path: HigherOrderPath {
                                                                            leading: false,
                                                                            segments: Interlace {
                                                                                values: [
                                                                                    Bare(
                                                                                        Id(
                                                                                            Ident(
                                                                                                MyTrait,
                                                                                            ),
                                                                                        ),
                                                                                    ),
                                                                                ],
                                                                            },
                                                                        },
                                                                    },
                                                                ),
                                                                Tr(
                                                                    TraitBound {
                                                                        q: false,
                                                                        for_lts: None,
                                                                        path: HigherOrderPath {
                                                                            leading: false,
                                                                            segments: Interlace {
                                                                                values: [
                                                                                    Bare(
                                                                                        Id(
                                                                                            Ident(
                                                                                                Send,
                                                                                            ),
                                                                                        ),
                                                                                    ),
                                                                                ],
                                                                            },
                                                                        },
                                                                    },
                                                                ),
                                                            ],
                                                        },
                                                    ),
                                                },
                                            ),
                                        ),
                                    ],
                                },
                            },
                        ),
                    ],
                },
            },
        ),
    ),
)
